# gerber_writer

./: .gitignore  A simple API for writing Gerber files — gerber_writer 0.3.1 documentation.html  NUL  README.md  README.rst  conftest.py  index.html  pyproject (copy).toml  pyproject.toml  savepyproject.savetoml  zup.sh  zup0.sh
A simple API for writing Gerber files — gerber_writer 0.3.1 documentation_files/: documentation_options.js.download
doc/: README.rst  What_is_new.txt  changelog.rst  changelog.txt  classhierarchy.txt  conf.py  index.rst  notes.txt  reference.rst
doc/_static/: documentation_options.js
docs/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  reference.html  search.html  searchindex.js
docs/_sources/: README.rst.txt  changelog.rst.txt  gerber_writer_reference.rst.txt  index.rst.txt  readme.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: README.doctree  changelog.doctree  (+3 more)
examples/: .example_small.py.swp  example_outline.py  example_random.py  example_small.py  example_synthetic.py  ze-bug-no-bug.py  ze-bug.py
pius/: pyproject.toml
tests/: KT-test-01.py  gerber_writer_doctest.py  note.txt  test_arcs.py  test_contours.py  writer_test.py
tools/: PyPI-make-and-upload.sh  PyPI_make.cmd  PyPI_upload_real.cmd  PyPI_upload_test.cmd  RGC.cmd  docs.cmd  examples_run.cmd  gerber_writer_planning.txt  github_make.cmd  pip_test.cmd  pip_upload_check.cmd  pip_upload_testpypi.cmd  pydoc.cmd  pypi-make-and-upload.sh  test.cmd  test.pypi-make-and-upload.sh  test_pip.cmd
(+67 files in other folders)
