[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "gerber_writer"
version = "0.4.3.2"
authors = [
  { name="Karel Tavernier", email="karel_tavernier@hotmail.com" },
]
description = "A library to write Gerber files"
readme = "doc/README.rst"
license = { text ="Apache 2.0 License" }
requires-python = ">=3.9"
keywords = ["Gerber", "RS-274X", "PCB", "CAD", "CAM", "library"]
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
	"Topic :: Software Development :: Libraries",
]

[project.urls]
"Repository" = "https://github.com/karel-tavernier/gerber_writer"
"Documentation"= "https://karel-tavernier.github.io/gerber_writer/html"
